feat: finished filters and created endpoint to get computers
